<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inlogscherm">

    <TextView
        android:id="@+id/Inloggen"
        android:layout_width="335dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal|start"
        android:text="@string/inloggen"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

    <EditText
        android:id="@+id/et_wachtwoord"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="164dp"
        android:background="@drawable/rounded_corners"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Inloggen" />

    <EditText
        android:id="@+id/naam"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/rounded_corners"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Inloggen" />

    <Button
        android:id="@+id/button"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="228dp"
        android:background="@drawable/oval"
        android:text="@string/inloggen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Inloggen" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="42dp"
        android:text="@string/e_mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Inloggen" />

    <TextView
        android:id="@+id/tv_wachtwoord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="132dp"
        android:text="@string/wachtwoord"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Inloggen" />

</androidx.constraintlayout.widget.ConstraintLayout>