<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/drawer_layout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="true"
  tools:context=".PlayActivity">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
      android:id="@+id/include"
      layout="@layout/toolbar" />

    <ImageView
      android:layout_width="145dp"
      android:layout_height="159dp"
      android:layout_marginEnd="-10dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/top_right_purple_corner" />

    <ImageView
      android:id="@+id/imageView3"
      android:layout_width="292dp"
      android:layout_height="255dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:srcCompat="@drawable/bottom_left_blue_corner" />

    <ImageView
      android:id="@+id/iv_vraag"
      android:layout_width="253dp"
      android:layout_height="217dp"
      android:layout_marginTop="60dp"
      android:scaleType="fitXY"
      android:visibility="gone"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/example_background" />

    <TextView
      android:id="@+id/tv_vraag"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="32dp"
      android:layout_weight="1"
      android:ellipsize="none"
      android:ems="10"
      android:gravity="center_horizontal|center_vertical"
      android:importantForAutofill="no"
      android:maxLines="10"
      android:scrollHorizontally="false"
      android:text="Van welke kunstenaar is dit schilderij?"
      android:textAppearance="@style/TextAppearance.AppCompat.Large"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/iv_vraag" />

    <RadioGroup
      android:id="@+id/rg_antwoorden"
      android:layout_width="357dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_vraag">

      <RadioButton
        android:id="@+id/rb_antwoord1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/vraag1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="visible" />

      <RadioButton
        android:id="@+id/rb_antwoord2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/vraag2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="visible" />

      <RadioButton
        android:id="@+id/rb_antwoord3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/vraag3"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="visible" />
    </RadioGroup>

  </androidx.constraintlayout.widget.ConstraintLayout>

  <com.google.android.material.navigation.NavigationView
    android:id="@+id/navigation"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    app:headerLayout="@layout/sidebar_header"
    app:menu="@menu/menu" />

</androidx.drawerlayout.widget.DrawerLayout>
